@@ -3,13 +3,9 @@ plugins {
     id("module.publication")
 }
 
-tasks.withType<JavaExec> { jvmArgs("--enable-preview") }
-
-tasks.withType<JavaCompile> { options.compilerArgs.add("--enable-preview") }
-
 java {
-    sourceCompatibility = JavaVersion.VERSION_21
-    targetCompatibility = JavaVersion.VERSION_21
+    sourceCompatibility = JavaVersion.VERSION_22
+    targetCompatibility = JavaVersion.VERSION_22
     withSourcesJar()
 }
 
